--- a/02/main.css
+++ b/02/main.css
@@ -9,8 +9,26 @@ html, body
     width:100%;
     height:100%;
 }
-head {
-    border: #284997;
+.head1 
+{
+   border-style: double;
+   color: #284997;
+   width: 100%;
+   height: 20%;
+   display:flex;
+   align-items: center;
+}
+.iconotelefono {
+    width: 30px;
+    padding-left: 20px;
+    color: #284997; 
+}
+.headinfo {
+    color: #284997;  
+    float:left
+}
+.logo {
+    float:left
 }
 .styleHead
 {
@@ -32,4 +50,42 @@ head {
     width: 100%;
     display:flex;
     justify-content: center;
+}
+body {
+    background-color: #b5c8f5;
+}
+.imagen1 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.serviciosgenerales {
+    color: aliceblue;
+    float:left
+}
+.field {
+    align-items: center;
+}
+.bloquecompleto¨{
+    width:100%; 
+    height:60%; 
+    background-color: blue;
+}
+.bloqueparrafo{
+    width: 50%; 
+    height: 100%; 
+    background-color: #284997; 
+    float: left;
+}
+.bloqueformulario{
+    width: 50%; 
+    height: 100%; 
+    background-color:#295fdf; 
+    float: left; 
+    display: flex; 
+    justify-content: center;
+}
+.textoterminos{
+    color: rgb(247, 247, 247);
 }
