agregar vision y mision

--- a/03/quienes-somos/quienessomos.css
+++ b/03/quienes-somos/quienessomos.css
@@ -24,7 +24,7 @@ p {
 .imagenelectronica{
     width:50%; 
     height:100%; 
-    float:left;" src="IMAGEN ELEC.jpg" alt="electronica"
+    float:left;
 }
 h3 {
     color: #284997;
