--- a/03/quienes-somos/quienessomos.css
+++ b/03/quienes-somos/quienessomos.css
@@ -91,6 +91,20 @@ h4 {
     width: 100%; 
     height: 300px;
 }
+.section4 {
+    height:100%; 
+    width: 50%;
+    float: left;
+    display: flex;
+    justify-content: center;
+}
+.section5 {
+    height: 100%;
+    width: 50%;
+    float: left;
+    display: flex; 
+    align-items: center;
+}
 .head3 {
     width: 100%; 
     height: 300px;
